@@ -154,12 +154,12 @@ __CleanMDS(MDSU_CONTEXT *pContext)
 static void bioapi_Get_H_Layer_Schema_Attributes(CSSM_DB_SCHEMA_ATTRIBUTE_INFO **pList)
 {
 	static CSSM_DB_SCHEMA_ATTRIBUTE_INFO rgAttributes[BIOAPI_H_LAYER_NUM_ATTRIBUTES] = {
-		BIOAPI_ATTRINFO_MODULEID,
-		BIOAPI_ATTRINFO_MODULENAME,
-		BIOAPI_ATTRINFO_PRODUCTVERSION,
-		BIOAPI_ATTRINFO_SPECVERSION,
-		BIOAPI_ATTRINFO_VENDOR,
-		BIOAPI_ATTRINFO_DESCRIPTION
+			BIOAPI_ATTRINFO_MODULEID,
+			BIOAPI_ATTRINFO_MODULENAME,
+			BIOAPI_ATTRINFO_PRODUCTVERSION,
+			BIOAPI_ATTRINFO_SPECVERSION,
+			BIOAPI_ATTRINFO_VENDOR,
+			BIOAPI_ATTRINFO_DESCRIPTION
 	};
 
 	*pList = rgAttributes;
